sua lai docker compose

--- a/deployment/mlflow/docker-compose.yaml
+++ b/deployment/mlflow/docker-compose.yaml
@@ -1,8 +1,16 @@
-version: '3'
 services:
   mlflow:
     image: ghcr.io/mlflow/mlflow:latest
+    container_name: mlflow-tracking-server
     ports:
       - "5555:5000"
-    command: mlflow server --host 0.0.0.0 --backend-store-uri sqlite:///mlflow.db --default-artifact-root /tmp/mlruns
-    container_name: mlflow-tracking-server
+    command: >
+      mlflow server
+      --host 0.0.0.0
+      --backend-store-uri sqlite:////data/mlflow.db
+      --serve-artifacts
+      --artifacts-destination /artifacts
+    volumes:
+      - ./mlflow_db:/data
+      - ./mlruns:/artifacts
+    restart: unless-stopped
