--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,11 @@ pandas==1.5.3          # Data manipulation and analysis — core for working wit
 numpy==1.24.3          # Numerical operations, arrays, and matrix support (used by almost all ML libraries)
 
 # ---------------------------------------------
+# 🌐 WEB & API COMMUNICATION
+# ---------------------------------------------
+requests>=2.28.0       # HTTP library for making API calls — essential for testing APIs and fetching data
+
+# ---------------------------------------------
 # 🧠 MACHINE LEARNING
 # ---------------------------------------------
 scikit-learn==1.2.2    # Classic ML models (regression, classification, clustering), preprocessing, model evaluation
@@ -14,6 +19,7 @@ xgboost==1.7.5
 # ---------------------------------------------
 matplotlib==3.7.1      # Base library for plotting graphs, charts, and visualizations
 seaborn==0.12.2        # High-level interface for drawing attractive and informative statistical graphics (built on matplotlib)
+streamlit>=1.24.0      # Interactive web app framework for data science — perfect for creating ML model demos and dashboards
 
 # ---------------------------------------------
 # 📦 EXPERIMENT TRACKING & MODEL MANAGEMENT
