sua lai github action

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,11 +3,10 @@ name: Build and Push Docker images
 on:
   push:
     tags: [ 'v*.*.*' ]
-  workflow_dispatch:
 
 permissions:
   contents: read
-  packages: read
+  packages: write
 
 jobs:
   docker:
@@ -46,12 +45,8 @@ jobs:
         with:
           images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.image_name }}
           tags: |
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha
-            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/heads/main') }}
+            # Chỉ tạo một tag duy nhất từ git tag
+            type=ref,event=tag
 
       - name: Build and push
         uses: docker/build-push-action@v5
