sua lai ket noi streamlit tren k8s

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
         rev: v0.8.4
         hooks:
         -   id: ruff
-            args: [--fix]
+            args: [--fix, --exit-non-zero-on-fix]
 
     # === BASIC FILE CHECKS ===
     -   repo: https://github.com/pre-commit/pre-commit-hooks
